tests/examples/fail/safety3_extra_inv.fly
# Copyright 2022-2023 VMware, Inc.
# SPDX-License-Identifier: BSD-2-Clause

# TEST --name houdini --all-solvers -- infer --houdini

mutable x: bool
mutable y: bool
mutable z: bool


assume x & y & z
assume always x'=(x&y) & y'=y
assert always x
proof {
    invariant y
    invariant z
}
